# roborun

./: Cargo.toml  notes
src/: actuator.rs  crucible.rs  engine.rs  individual.rs  main.rs  population.rs  robot.rs  testbed.rs  world_owner.rs
src/objects/: .convex.rs.swp  ball.rs  box_node.rs  capsule.rs  cone.rs  convex.rs  cylinder.rs  heightfield.rs  mesh.rs  mod.rs  node.rs
src/robot/: brain.rs  eightdof.rs  fourdof.rs  mechadon.rs  mod.rs
static/: glimmerstrands.js  glimmerstrands.min.js  glimmerstrands.min.js.map  index.html  rangeslider.min.css  spinner.css  switch.css
