[package]
name = "roborun"
version = "0.1.0"
authors = ["Rob Parrett <robparrett@gmail.com>"]
edition = "2018"

[dependencies]
stdweb = "0.4.13"
nalgebra = "0.16"
ncollide3d = "0.17"
nphysics3d = "0.9"
num-traits = "0.2"
kiss3d     = "0.17"
time       = "0.1"
rand       = { version = "0.5", features = ["stdweb"] }
itertools  = "0.8"
